# yahoo_roster_scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  agents.md  environ_.py  google_api_auth.py  positions_scraper.py  proxies_scraper.py  pyproject.toml  readme.md  requirements.txt  schedule_scraper.py  write_to_google_sheet.py  yahoo_roster_scraper.py
src/roster_scraper/: __init__.py  cli.py
src/roster_scraper/core/: __init__.py  constants.py  output.py  parsing.py
src/roster_scraper/services/: __init__.py  environ_.py  google_api_auth.py  matchups.py  positions.py  proxies.py  roster_workflow.py  schedule.py  write_to_google_sheet.py
tests/: conftest.py  test_cli_get_body.py  test_cli_headers.py  test_cli_helpers.py  test_cli_main.py  test_cli_matchup_dates.py  test_core_output.py  test_core_parsing.py  test_google_api_auth.py  test_google_integrations.py  test_matchups.py  test_proxies.py  test_roster_workflow.py  test_roster_workflow_non_xlsx.py  test_roster_workflow_xlsx.py  test_schedule.py  test_smoke.py
tests/fixtures/: frozenpool_schedule.html  yahoo_team_page.html
