[project]
name = "yahoo-roster-scraper"
version = "0.1.0"
description = "Yahoo fantasy hockey roster scraper"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.11.1",
    "bs4==0.0.1",
    "cachetools==5.3.2",
    "certifi==2022.9.24",
    "cffi==1.17.1",
    "charset-normalizer==2.1.1",
    "colorama==0.4.6",
    "cryptography==44.0.0",
    "docopt==0.6.2",
    "google-api-core==2.15.0",
    "google-api-python-client==2.110.0",
    "google-auth==2.25.1",
    "google-auth-httplib2==0.1.1",
    "google-auth-oauthlib==1.1.0",
    "googleapis-common-protos==1.62.0",
    "httplib2==0.22.0",
    "idna==3.4",
    "importlib-metadata==7.0.0",
    "lxml==5.2.1",
    "num2words==0.5.13",
    "oauthlib==3.2.2",
    "platformdirs==4.1.0",
    "protobuf==4.25.1",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.22",
    "pyparsing==3.1.1",
    "python-environ==0.4.54",
    "requests==2.28.1",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "simpleeval==0.9.13",
    "soupsieve==2.3.2.post1",
    "tomli==2.0.1",
    "uritemplate==4.1.1",
    "urllib3==1.26.12",
    "xlsxwriter==3.1.9",
    "zipp==3.17.0",
]

[tool.uv]
package = false
