[project]
name = "yahoo-roster-scraper"
version = "0.1.0"
description = "Yahoo fantasy hockey roster scraper"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.11.1",
    "bs4==0.0.1",
    "cachetools==5.3.2",
    "certifi==2024.12.14",
    "cffi==2.0.0",
    "charset-normalizer==2.1.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "docopt==0.6.2",
    "google-api-core==2.25.2",
    "google-api-python-client==2.179.0",
    "google-auth==2.41.1",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "importlib-metadata==7.0.0",
    "lxml==5.2.1",
    "num2words==0.5.13",
    "oauthlib==3.2.2",
    "platformdirs==4.1.0",
    "protobuf==5.29.6",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.22",
    "pyparsing==3.1.1",
    "requests==2.32.4",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "simpleeval==1.0.5",
    "soupsieve==2.3.2.post1",
    "tomli==2.0.1",
    "uritemplate==4.1.1",
    "urllib3==2.6.3",
    "xlsxwriter==3.1.9",
    "zipp==3.19.1",
]

[project.scripts]
yahoo-roster-scraper = "roster_scraper.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roster_scraper"]
